<resources>
  <string name="app_name">Badreads</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="prompt_username">Username</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome! "</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Invalid username/password"</string>
  <string name="sign_up">Sign Up</string>
  <string name="dont_have_an_account">Don\'t have an account?</string>
  <string name="badreads">badreads</string>
  <string name="welcome_message">"Welcome, %1$s!"</string>
  <string name="shared_preferences_username_key">com.eacarey.badreads.PREFERENCES_USERNAME_KEY</string>
  <string name="shared_preferences_password_key">com.eacarey.badreads.PREFERENCES_PASSWORD_KEY</string>
  <string name="create_new_account">Create new account</string>
  <string name="confirm_password">Confirm password</string>
  <string name="create_account">Create account</string>
  <string name="username_already_exists">Username not available</string>
  <string name="passwords_dont_match">Passwords do not match</string>
  <string name="log_out">Log out</string>
  <string name="admin_page_button_text">Admin</string>
  <string name="search_books_autocomplete_label">Search books</string>
</resources>