<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  tools:context=".ui.signup.SignUpActivity">

  <TextView
    android:id="@+id/badreads_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="serif-monospace"
    android:gravity="center"
    android:text="@string/badreads"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/create_account_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/create_new_account"
    android:textSize="20sp"
    android:layout_marginTop="36sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/badreads_logo" />

  <EditText
    android:id="@+id/password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:autofillHints="@string/prompt_password"
    android:hint="@string/prompt_password"
    android:imeActionLabel="@string/action_sign_in_short"
    android:imeOptions="actionDone"
    android:inputType="textPassword"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/username" />

  <EditText
    android:id="@+id/confirm_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:autofillHints="@string/confirm_password"
    android:hint="@string/confirm_password"
    android:imeActionLabel="@string/create_account"
    android:imeOptions="actionDone"
    android:inputType="textPassword"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password" />

  <EditText
    android:id="@+id/username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="46dp"
    android:autofillHints="@string/prompt_username"
    android:hint="@string/prompt_username"
    android:inputType="textEmailAddress"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/create_account_label" />

  <Button
    android:id="@+id/create_account_button"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="96dp"
    android:layout_gravity="start"
    android:enabled="false"
    android:text="@string/create_account"
    android:gravity="center"
    android:theme="@style/Widget.AppCompat.ActionButton"
    app:layout_constraintTop_toBottomOf="@id/confirm_password"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>