<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/badreads_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="serif-monospace"
    android:gravity="center"
    android:text="@string/badreads"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/welcome_label"
    android:layout_width="215dp"
    android:layout_height="47dp"
    android:gravity="center"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/badreads_logo"
    android:layout_marginTop="16dp"
    />

  <Button
    android:id="@+id/log_out_button"
    style="@style/Widget.Material3.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/log_out"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />
  <Button
    android:id="@+id/admin_page_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    android:text="@string/admin_page_button_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />
  <AutoCompleteTextView
    android:id="@+id/search_books_autocomplete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/search_books_autocomplete_label"
    android:width="@dimen/dimen_dropdown_view_width"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/welcome_label"
    android:layout_marginTop="32dp"
    >
    <requestFocus />
  </AutoCompleteTextView>

  <TextView
    android:id="@+id/my_book_list_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:padding="6dp"
    android:gravity="center"
    style="@style/TextAppearance.Material3.LabelMedium"
    android:text="My list"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/search_books_autocomplete"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:layout_editor_absoluteX="16dp" />


  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerview"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="6dp"
    style="@style/Widget.AppCompat.ListView"
    android:isScrollContainer="true"
    app:layout_constraintBottom_toTopOf="@id/log_out_button"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/my_book_list_label"
    tools:listitem="@layout/books_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>